# DailyChem

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  run.bat  run.sh
data/rules/: nmr_1h_rules.yaml
docs/: README.md  ui_usage.md
docs/design-docs/: cdx-handling-spike.md  nmr-input-strategy.md
docs/exec-plans/active/: chem_ai_workflow_todo.md  phase9_openai_sdk_plan.md
docs/references/: requirements-dialog.md
examples/processed/: assignment_draft.md  experiment_record.md  nmr_peaks.json  nmr_peaks_clean.json  nmr_report.txt
examples/project_demo/compounds/C001/: metadata.json
examples/project_demo/compounds/C001/reports/: summary.md
examples/project_demo/compounds/C001/structure/: structure.mol  structure.smi
examples/raw/: compound_b_single.cdx  compound_b_single.cdxml  compound_b_single.mol  compound_b_single.sdf  compound_b_single.smi  experiment_record_example.yaml  nmr_multiplet_table_clean_example.tsv  nmr_multiplet_table_example.tsv  nmr_multiplet_table_newline_example.tsv  synthesis_route_cys.cdx
prompts/: assignment_summary.txt  experiment_record_en.txt  polish_record.txt  warning_summary.txt
src/chem_workflow/: __init__.py  assignment.py  cli.py  llm.py  llm_cli.py  llm_models.py  models.py  nmr.py  nmr_formatter.py  records.py  storage.py  structure.py  ui_support.py
templates/: experiment_record_en.md  experiment_record_zh.md
tests/: test_app.py  test_assignment.py  test_llm.py  test_nmr.py  test_nmr_formatter.py  test_records.py  test_smoke.py  test_storage.py  test_structure.py  test_ui_support.py
